--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -22,7 +22,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
@@ -39,7 +39,146 @@
                 </div>
             </div>
         </nav>
+        <!-- slider start -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>430$</h1>
+                                    <div class="btn btn-danger">BY Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid" src="./images/banner-images/headphone.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active bg-info rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Mega LCD TV For Sports</h2>
+                                    <p>This is the best tv in the world for people who just want to waste time in front
+                                        of tv.</p>
+                                    <h1>430$</h1>
+                                    <div class="btn btn-danger">BY Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid" src="./images/banner-images/tv.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item active bg-info rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>X-Box for your living room</h2>
+                                    <p>This is the best x-box in the world for people who just want to waste time in
+                                        front of fake sport.</p>
+                                    <h1>600$</h1>
+                                    <div class="btn btn-danger">BY Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid" src="./images/banner-images/xbox.png" class="d-block w-100"
+                                    alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider end -->
     </header>
+    <main>
+        <!-- catagoris start -->
+        <section>
+            <div class="container overflow-hidden text-center my-5">
+                <div class="row g-2">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 border bg-warning  d-flex align-items-center justify-content-center rounded">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="./images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-center rounded">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="./images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-center rounded">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="./images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- catagoris end -->
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="card-group">
+                <div class="row g-2">
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 col-12">
+                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 c col-12">
+                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 col-12">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
