--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                         <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Supply 350</h5>
+                            <h2>320$</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                             <p class="card-text">
@@ -156,6 +157,7 @@
                         <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
+                            <h2>320$</h2>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <p class="card-text">
@@ -167,6 +169,51 @@
                         <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
+                            <h2>320$</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container my-5">
+            <h2>Backpack</h2>
+            <div class="card-group">
+                <div class="row g-2">
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 col-12">
+                        <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h2>320$</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer..</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 c col-12">
+                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h2>320$</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content..</p>
+                            <p class="card-text">
+                            <div class="btn btn-warning">Buy Now</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card border-0 shadow-lg col-lg-4 col-md-6 col-12">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h2>320$</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This card has even longer content than the first to show that equal
                                 height action.</p>
